Fix issue with slider times masking based on z-index order.

--- a/app/components/Slider/Times/SliderTime.less
+++ b/app/components/Slider/Times/SliderTime.less
@@ -11,12 +11,9 @@
 
     opacity: 0;
 
-    z-index: @zIndex__negative;
-
     .RM__sliderMoving
     & {
         opacity: 1;
-        z-index: @zIndex__touchOverlay;
     }
 }
 
